# cms-sign-verify-bpi-v2

./: CMakeLists.txt  Makefile  README.md  authReq.sh  authReqSignature.c  auth_request_data.txt  ca_cert.der  ca_private_key.der  cm_device_cert.der  cm_device_private.pem  cms-sign-verify.sh  cms_sign_verify.c  root_certificate.der  root_private_key.der  validate_openssl.cmake
